--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,9 +6,25 @@ body.login{background: url("../img/large/lock.jpg") no-repeat fixed;background-s
 .message-form{color:#FFF !important;font:14px Roboto, Helvetica, sans-serif !important;font-weight:100 !important;text-align: center;}
 .hover-panel{width: 100%;height: 100%;background: url('../img/large/lock.jpg') fixed no-repeat;background-size:cover;display: block;position: absolute;top: 0;left: 0;z-index: 9999;display: none;}
 .nav-user .user{margin:0;}
-.btn-danger.logout{border-radius:50px;padding:7px 12px 5px 12px;box-shadow: none;margin-left:10px;border:none;background: rgba(80, 80, 80 ,1)}
+.btn-danger.logout{border-radius:50px;padding:7px 12px 5px 12px;box-shadow: none;margin-left:10px;border:none;background: rgba(80, 80, 80 ,1);}
 .btn-danger.logout:hover{border: none;background: rgba(50, 50, 50 ,1)}
 .extra-links a{color: #57a8b7 !important;font: 18px Roboto, Helvetica, sans-serif;font-weight: 300;-webkit-transition:all .5s;transition: all .5s;}
 .extra-links a:hover{color: #FFF !important;text-decoration: none;-webkit-transition:all .5s;transition:all .5s;}
 .panel-login input{font-family: Roboto, Helvetica, sans-serif;font-weight: 300;}
 .menu-icon{margin-right:10px;}
+.logout-btn-effect{
+    border-radius:10000px;
+    padding:7px 12px 5px 12px;
+    box-shadow: none;
+    margin-left:10px;
+    border:none;
+    background: rgba(80, 80, 80 ,1);
+    position:absolute;
+    z-index:-1000;
+}
+.logout-btn-effect-container{
+    position:absolute;
+    height:100%;
+    width:100%;
+    overflow:hidden;
+}
